[package]
name = "vi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.20.0", features = ["event-stream"] }
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.8.1", features = ["full"] }
tui = { version = "0.15.0", default-features = false, features = ["serde", "crossterm"] }
